Fixing double border in tables

--- a/app/assets/stylesheets/provider/_commons.scss
+++ b/app/assets/stylesheets/provider/_commons.scss
@@ -249,7 +249,3 @@ hr, {
   }
 }
 
-.operations {
-  padding: line-height-times(1 / 3);
-  @include white-box-shadow;
-}
